force-app/main/default/objects/custom_create31__c/custom_create31__c.object-meta.xml
<CustomObject>
    <label>Custom created object31</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects31</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>