force-app/main/default/objects/custom_create31__c/fields/custom_create_31field556__c.field-meta.xml
<CustomField>
    <fullName>custom_create_31field556__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 31field556</label>
    <type>Checkbox</type>
</CustomField>