force-app/main/default/objects/custom_create31__c/fields/custom_create_31field578__c.field-meta.xml
<CustomField>
    <fullName>custom_create_31field578__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 31field578</label>
    <type>Checkbox</type>
</CustomField>